fix mobile cutoff

--- a/templates/simple/src/styles.css
+++ b/templates/simple/src/styles.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-family: sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 figure {
